--- a/src/styles/Tutoring.scss
+++ b/src/styles/Tutoring.scss
@@ -115,7 +115,7 @@ strong {
       z-index: 0;
   
       // The SVG is added as an SVG background image
-      background-image: url('underline.svg');
+      background-image: url('/underline.svg');
       background-repeat: no-repeat;
   
       // This allows the SVG to flex in size to fit
